# flag_planner

./: README.md  rspx4.sh  run_planner.sh  smk.xml  static_planner.sh  x.xml.snippets.xml
realflight_sh/: fsm_control_record.sh  fsm_record.sh  fsm_traj_record.sh  go.sh  land.sh  planning_play.sh  plot.xml  readme.md  rspx4.sh  run_fsm.sh  run_planner.sh  takeoff_run_planner.sh
sim_test/: land.sh  real_plot.xml  real_record.bag  sim_plot.xml  sim_record.bag  so3_2023-05-10-10-54-54.bag  static_planner.sh  test_real_control.sh  test_sim_control.sh
src/Utils/odom_visualization/src/: odom_visualization.cpp
src/VINS-Fusion/config/: fast_drone_250.yaml  left.yaml
src/planner/bspline_race/: CMakeLists.txt  package.xml
src/planner/bspline_race/include/bspline_race/: EdtTransform.hpp  bspline_race.h
src/planner/bspline_race/launch/: traj_testing.launch
src/planner/bspline_race/msg/: BsplineTraj.msg
src/planner/bspline_race/src/: bspline_race.cpp  traj_server.cpp
src/planner/dynamic_env_generator/: CMakeLists.txt  package.xml
src/planner/dynamic_env_generator/launch/: run_simulator.launch
src/planner/dynamic_env_generator/src/: dynamic_env_generator.cpp  (+1 more)
src/planner/mapping/: CMakeLists.txt  package.xml
src/px4ctrl/: CMakeLists.txt
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: run_ctrl_sim.launch
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  input.cpp  input.h  lqr_control.cpp  lqr_control.h  px4ctrl_node.cpp
vins_output/: bias.txt  extrinsic_parameter.txt  stamped_traj_estimate.txt
(+17 files in other folders)
